@@ -1,6 +1,8 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
 
+- fixed regression: no receiver created for ES/PS/PES (reported by Gavin
+  Hamill)
 - VTP no longer uses a static priority value for its server-side receivers.
   The server stores channel and priority requested with the PROV command and
   re-uses these values in a subsequent TUNE for the same channel. The new
